--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">git2</string>
     <string name="Tes">mboh</string>
+    <string name="yahoo">mboh</string>
 </resources>
