--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">git2</string>
     <string name="Tes">mboh</string>
     <string name="yahoo">mboh</string>
+    <string name="Nyoba">bergulung</string>
 </resources>
